uf_ulog_macro/tests/ui/fail_unknown_ulog_attr_key.stderr
error: unsupported uf_ulog attribute key, expected `name`
 --> tests/ui/fail_unknown_ulog_attr_key.rs:2:11
  |
2 | #[uf_ulog(title = "gyro")]
  |           ^^^^^
