uf_ulog_macro/tests/ui/fail_unknown_ulog_attr_key.rs
#[derive(uf_ulog_macro::ULogData)]
#[uf_ulog(title = "gyro")]
struct UnknownAttrKey {
    timestamp: u64,
}

fn main() {}
